PSARC 2005/503 Boston and Seattle Platform Software Support 6342066 Add Boston and Seattle support to Solaris

--- a/usr/src/Makefile
+++ b/usr/src/Makefile
@@ -255,6 +255,8 @@ EXPORT_SRC:
 	@cd uts/sun4u/ents;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/excalibur;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/chicago;	pwd;	$(MAKE) EXPORT_SRC
+	@cd uts/sun4u/boston;	pwd;	$(MAKE) EXPORT_SRC
+	@cd uts/sun4u/seattle;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/littleneck;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/lw2plus;	pwd;	$(MAKE) EXPORT_SRC
 	@cd uts/sun4u/lw8;	pwd;	$(MAKE) EXPORT_SRC
