--- a/usr/src/psm/stand/boot/sparcv9/sun4u/Makefile
+++ b/usr/src/psm/stand/boot/sparcv9/sun4u/Makefile
@@ -45,6 +45,8 @@ PLATLINKS	+= SUNW,Sun-Blade-1000
 PLATLINKS	+= SUNW,Sun-Blade-1500
 PLATLINKS	+= SUNW,Sun-Blade-2500
 PLATLINKS	+= SUNW,A70
+PLATLINKS	+= SUNW,Sun-Fire-V445
+PLATLINKS	+= SUNW,Sun-Fire-V215
 PLATLINKS	+= SUNW,Sun-Fire
 PLATLINKS	+= SUNW,Sun-Fire-V240
 PLATLINKS	+= SUNW,Sun-Fire-V250
