--- a/usr/src/uts/sun4u/Makefile.files
+++ b/usr/src/uts/sun4u/Makefile.files
@@ -97,6 +97,7 @@ SIMBA_PCI_OBJS	+= simba.o
 DB21554_OBJS	+= db21554.o
 US_OBJS 	+= us_drv.o
 POWER_OBJS	+= power.o
+EPIC_OBJS	+= epic.o
 GRBEEP_OBJS	+= grbeep.o
 ADM1031_OBJS	+= adm1031.o
 ICS951601_OBJS	+= ics951601.o
@@ -108,6 +109,7 @@ PCF8584_OBJS    += pcf8584.o
 MI2CV_OBJS	+= mi2cv.o
 I2BSC_OBJS	+= i2bsc.o
 PCA9556_OBJS    += pca9556.o
+ADM1026_OBJS	+= adm1026.o
 BBC_OBJS	+= bbc_beep.o
 TDA8444_OBJS    += tda8444.o
 MAX1617_OBJS    += max1617.o
