--- a/usr/src/lib/libc_psr/spec/sun4u-us3/Makefile.links
+++ b/usr/src/lib/libc_psr/spec/sun4u-us3/Makefile.links
@@ -38,6 +38,8 @@ LINKED_PLATFORMS	= SUNW,Sun-Blade-1000
 LINKED_PLATFORMS	+= SUNW,Sun-Blade-1500
 LINKED_PLATFORMS	+= SUNW,Sun-Blade-2500
 LINKED_PLATFORMS	+= SUNW,A70
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V445
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V215
 LINKED_PLATFORMS	+= SUNW,Sun-Fire
 LINKED_PLATFORMS	+= SUNW,Sun-Fire-V240
 LINKED_PLATFORMS	+= SUNW,Sun-Fire-V250
