6336786 time doesn't fly when CPUs are not having fun 6347678 lgrp_plat_init() should use routines available from pci_cfgspace.h

--- a/usr/src/uts/i86pc/Makefile.workarounds
+++ b/usr/src/uts/i86pc/Makefile.workarounds
@@ -90,3 +90,8 @@ WORKAROUND_DEFS += -DOPTERON_ERRATUM_122
 # Probe Response
 #
 WORKAROUND_DEFS += -DOPTERON_ERRATUM_131
+
+#
+# TSC may drift when C1-Clock ramping enabled
+#
+WORKAROUND_DEFS += -DOPTERON_WORKAROUND_6336786
