PSARC 2005/475 Graphics private misc module for x86 PSARC 2005/623 gfx_private update for devmap and DMA 6341471 need graphics private misc module

--- a/usr/src/uts/i86pc/Makefile.i86pc
+++ b/usr/src/uts/i86pc/Makefile.i86pc
@@ -310,7 +310,7 @@ SYS_KMODS	+=
 #
 #	'Misc' Modules (/kernel/misc):
 #
-MISC_KMODS	+= pci_autoconfig bootdev acpica pciehpc
+MISC_KMODS	+= pci_autoconfig bootdev acpica pciehpc gfx_private
 
 #
 #	'Mach' Modules (/kernel/mach):
