--- a/usr/src/uts/i86pc/Makefile.files
+++ b/usr/src/uts/i86pc/Makefile.files
@@ -193,6 +193,9 @@ ACPICA_OBJS	+= dbcmds.o dbdisply.o \
 
 POWER_OBJS	+= power.o
 
+GFX_PRIVATE_OBJS	+= gfx_private.o gfxp_pci.o gfxp_segmap.o \
+			   gfxp_devmap.o gfxp_vgatext.o gfxp_vm.o vgasubr.o
+
 #
 #	Build up defines and paths.
 #
