4623955 torch <sys/ioreq.h> 6338021 ON ITU files are no longer needed 6338025 realmode still thumping around 6338028 findunref contains needless exceptions for ia64

--- a/usr/src/uts/i86pc/chs/Makefile
+++ b/usr/src/uts/i86pc/chs/Makefile
@@ -1,7 +1,7 @@
 #
 # uts/i86pc/chs/Makefile
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -25,7 +25,6 @@ OBJECTS		= $(CHS_OBJS:%=$(OBJS_DIR)/%)
 LINTS		= $(CHS_OBJS:%.o=$(LINTS_DIR)/%.ln)
 ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
 CONF_SRCDIR	= $(UTSBASE)/i86pc/io/dktp/hba/chs
-ITU_SRCDIR	= $(UTSBASE)/i86pc/io/dktp/hba/chs
 
 #
 #	Include common rules.
@@ -35,9 +34,9 @@ include $(UTSBASE)/i86pc/Makefile.i86pc
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY) $(CONFMOD) $(ITUMOD)
+ALL_TARGET	= $(BINARY) $(CONFMOD)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE) $(ROOT_ITUFILE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
 
 #
 #	Overrides.
