--- a/usr/src/uts/i86pc/dnet/Makefile
+++ b/usr/src/uts/i86pc/dnet/Makefile
@@ -22,7 +22,7 @@
 #
 # uts/i86pc/dnet/Makefile
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma	ident	"%Z%%M%	%I%	%E% SMI"
@@ -46,7 +46,6 @@ OBJECTS		= $(DNET_OBJS:%=$(OBJS_DIR)/%)
 LINTS		= $(DNET_OBJS:%.o=$(LINTS_DIR)/%.ln)
 ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
 CONF_SRCDIR	= $(UTSBASE)/i86pc/io
-ITU_SRCDIR	= $(UTSBASE)/i86pc/io
 
 #
 #	Include common rules.
@@ -56,9 +55,9 @@ include $(UTSBASE)/i86pc/Makefile.i86pc
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY) $(CONFMOD) $(ITUMOD)
+ALL_TARGET	= $(BINARY) $(CONFMOD)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE) $(ROOT_ITUFILE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
 
 DEBUG_FLGS      =
 $(NOT_RELEASE_BUILD)DEBUG_DEFS	+= $(DEBUG_FLGS)
