--- a/usr/src/uts/intel/pcram/Makefile
+++ b/usr/src/uts/intel/pcram/Makefile
@@ -21,7 +21,7 @@
 #
 #
 # uts/intel/pcram/Makefile
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -43,7 +43,6 @@ MODULE		= pcram
 OBJECTS		= $(PCRAM_OBJS:%=$(OBJS_DIR)/%)
 LINTS		= $(PCRAM_OBJS:%.o=$(LINTS_DIR)/%.ln)
 ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
-ITU_SRCDIR      = $(UTSBASE)/common/io/pcmcia
 
 #
 #	Include common rules.
@@ -53,9 +52,9 @@ include $(UTSBASE)/intel/Makefile.intel
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY) $(ITUMOD)
+ALL_TARGET	= $(BINARY)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_ITUFILE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 
 #
 #	Override defaults to build a unique, local modstubs.o.
