--- a/usr/src/uts/intel/sd/Makefile
+++ b/usr/src/uts/intel/sd/Makefile
@@ -21,7 +21,7 @@
 #
 #
 # uts/intel/io/sd/Makefile
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -44,7 +44,6 @@ OBJECTS		= $(SD_OBJS:%=$(OBJS_DIR)/%)
 LINTS		= $(SD_OBJS:%.o=$(LINTS_DIR)/%.ln)
 ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
 CONF_SRCDIR	= $(UTSBASE)/intel/io/scsi/targets
-ITU_SRCDIR	= $(UTSBASE)/intel/io/scsi/targets
 
 #
 #	Include common rules.
@@ -54,9 +53,9 @@ include $(UTSBASE)/intel/Makefile.intel
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY) $(CONFMOD) $(ITUMOD)
+ALL_TARGET	= $(BINARY) $(CONFMOD)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE) $(ROOT_ITUFILE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_CONFFILE)
 
 #
 #	Overrides.
