--- a/usr/src/uts/intel/strategy/Makefile
+++ b/usr/src/uts/intel/strategy/Makefile
@@ -22,7 +22,7 @@
 #
 # uts/intel/strategy/Makefile
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
@@ -45,7 +45,6 @@ MODULE		= strategy
 OBJECTS		= $(STRATEGY_OBJS:%=$(OBJS_DIR)/%)
 LINTS		= $(STRATEGY_OBJS:%.o=$(LINTS_DIR)/%.ln)
 ROOTMODULE	= $(ROOT_MISC_DIR)/$(MODULE)
-ITU_SRCDIR	= $(UTSBASE)/common/io/dktp/drvobj
 
 #
 #	Include common rules.
@@ -55,9 +54,9 @@ include $(UTSBASE)/intel/Makefile.intel
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY) $(ITUMOD)
+ALL_TARGET	= $(BINARY)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_ITUFILE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 
 #
 #	Overrides.
