--- a/usr/src/uts/sparc/vuid3ps2/Makefile
+++ b/usr/src/uts/sparc/vuid3ps2/Makefile
@@ -43,7 +43,6 @@ MODULE		= vuid3ps2
 OBJECTS		= $(VUIDPS2_OBJS:%=$(OBJS_DIR)/%)
 LINTS		= $(VUIDPS2_OBJS:%.o=$(LINTS_DIR)/%.ln)
 ROOTMODULE	= $(ROOT_STRMOD_DIR)/$(MODULE)
-ITU_SRCDIR	= $(UTSBASE)/common/io/vuidmice
 
 #
 #	Include common rules.
@@ -53,9 +52,9 @@ include $(UTSBASE)/sparc/Makefile.sparc
 #
 #	Define targets
 #
-ALL_TARGET	= $(BINARY) $(ITUMOD)
+ALL_TARGET	= $(BINARY)
 LINT_TARGET	= $(MODULE).lint
-INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOT_ITUFILE)
+INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 
 #
 #	Overrides.
