PSARC 2005/465 FMA for UltraSPARC-T1 CPU/Memory 6278369 enhance C-based diagnosis engine for Niagara CPU diagnosis 6336193 FRU FMRI for cpu fault is not in hc: scheme format

--- a/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/Makefile.cpumem
+++ b/usr/src/cmd/fm/modules/sun4/cpumem-diagnosis/Makefile.cpumem
@@ -31,9 +31,9 @@ SUN4DIR = ../../sun4/$(MODULE)
 SRCS = \
 	cmd_bank.c \
 	cmd_cpu.c \
+	cmd_cpu_arch.c \
 	cmd_cpuerr.c \
 	cmd_dimm.c \
-	cmd_ecache.c \
 	cmd_fmri.c \
 	cmd_list.c \
 	cmd_main.c \
@@ -43,7 +43,8 @@ SRCS = \
 	cmd_page.c \
 	cmd_pageerr.c \
 	cmd_state.c \
-	cmd_util.c
+	cmd_util.c \
+	$($(ARCH)_SRCS)
 
 include ../../Makefile.plugin
 
@@ -65,7 +66,3 @@ LDFLAGS += -lkstat
 
 %.ln: $(SUN4DIR)/%.c
 	$(LINT.c) -c $<
-
-$(CONF): $(SUN4DIR)/$(CONF)
-	$(RM) $(CONF); $(CP) $(SUN4DIR)/$@ $@
-
