--- a/usr/src/lib/fm/libmdesc/sparc/Makefile
+++ b/usr/src/lib/fm/libmdesc/sparc/Makefile
@@ -25,27 +25,7 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
+MAPDIR = ../spec/sparc
 include ../Makefile.com
 
-SCHEME_COMMON = ../common
-
-SRCS = \
-	mdesc_devinit.c \
-	mem.c \
-	mem_disc.c \
-	mem_read.c \
-	mem_unum.c \
-	mem_util.c
-
-
-LDLIBS += -L$(ROOTLIB)/fm -lmdesc
-LDFLAGS += -R/usr/lib/fm
-
-include ../Makefile.targ
-
-%.o: $(SCHEME_COMMON)/%.c
-	$(COMPILE.c) -o $@ $<
-	$(CTFCONVERT_O)
-
-%.ln: $(SCHEME_COMMON)/%.c
-	$(LINT.c) -erroff=E_BAD_PTR_CAST_ALIGN -v -c $<
+install: all $(ROOTLIBS) $(ROOTLINKS) $(ROOTLINT)
