6350596 DCA should not be export controlled

--- a/usr/src/uts/intel/Makefile.intel
+++ b/usr/src/uts/intel/Makefile.intel
@@ -224,6 +224,7 @@ DRV_KMODS	+= consms
 DRV_KMODS	+= cpuid
 DRV_KMODS	+= crypto
 DRV_KMODS	+= cryptoadm
+DRV_KMODS	+= dca
 DRV_KMODS	+= devinfo
 DRV_KMODS	+= dld
 DRV_KMODS	+= dump
