6351165 Off by one word in xdr_decode_nfs_fh4

--- a/usr/src/uts/sparc/nfs/Makefile
+++ b/usr/src/uts/sparc/nfs/Makefile
@@ -61,13 +61,10 @@ INSTALL_TARGET	= $(BINARY) $(ROOTMODULE) $(ROOTLINK)
 #
 #	Overrides.
 #
-VOLFH_debug64	= -DVOLATILE_FH_TEST
-VOLFH_obj64	=
-
 MODSTUBS_DIR	= $(OBJS_DIR)
 $(MODSTUBS_O)	:= AS_CPPFLAGS += -DNFS_MODULE
 CLEANFILES	+= $(MODSTUBS_O)
-CFLAGS		+= $(CCVERBOSE) $(VOLFH_$(OBJS_DIR))
+CFLAGS		+= $(CCVERBOSE)
 
 #
 #	Default build targets.
