--- a/usr/src/uts/sparc/amsrc2/Makefile
+++ b/usr/src/uts/sparc/amsrc2/Makefile
@@ -22,13 +22,13 @@
 #
 # uts/sparc/amsrc2/Makefile
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #	This makefile drives the production of the audio mixer
 #	sample rate conversion routine #1 (amsrc2).
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 
 #
 #	Path to the base of the uts directory tree (usually /usr/src/uts).
