--- a/usr/src/uts/sparc/ecpp/Makefile
+++ b/usr/src/uts/sparc/ecpp/Makefile
@@ -21,7 +21,7 @@
 #
 #
 # uts/sparc/ecpp/Makefile
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -77,9 +77,11 @@ all:		$(ALL_DEPS)
 
 clean:		$(CLEAN_DEPS)
 
-clobber:	$(CLOBBER_DEPS)
+clean:		$(CLEAN_DEPS); \
+		$(RM) $(WARLOCK_OUT) $(WARLOCK_OK)
 
-lint:		$(LINT_DEPS)
+clobber:	$(CLOBBER_DEPS); \
+		$(RM) $(WARLOCK_OUT) $(WARLOCK_OK)
 
 modlintlib:	$(MODLINTLIB_DEPS) lint64
 
