6210677 dirname and basename are slower than they should be

--- a/usr/src/Makefile.lint
+++ b/usr/src/Makefile.lint
@@ -103,6 +103,7 @@ COMMON_SUBDIRS = \
 	cmd/devmgmt \
 	cmd/dfs.cmds \
 	cmd/diff3 \
+	cmd/dirname \
 	cmd/diskscan \
 	cmd/dispadmin \
 	cmd/dladm \
