--- a/usr/src/cmd/dirname/Makefile
+++ b/usr/src/cmd/dirname/Makefile
@@ -22,12 +22,11 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 1989 by Sun Microsystems, Inc.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 
 PROG= dirname
-
-SRCS= $(PROG:%=%.sh)
 
 include ../Makefile.cmd
 
@@ -39,6 +38,6 @@ install: all $(ROOTPROG)
 
 clean:
 
-lint:
+lint:	lint_PROG
 
 include ../Makefile.targ
