--- a/usr/src/lib/libsecdb/help/profiles/Makefile
+++ b/usr/src/lib/libsecdb/help/profiles/Makefile
@@ -54,6 +54,8 @@ HTMLENTS = \
 	RtNameServiceSecure.html \
 	RtNetMngmnt.html \
 	RtNetSecure.html \
+	RtNetWifiMngmnt.html \
+	RtNetWifiSecure.html \
 	RtObAccessMngmnt.html \
 	RtPrntAdmin.html \
 	RtProcManagement.html \
