--- a/usr/src/cmd/cmd-inet/usr.sbin/wificonfig/Makefile
+++ b/usr/src/cmd/cmd-inet/usr.sbin/wificonfig/Makefile
@@ -20,38 +20,47 @@
 # CDDL HEADER END
 #
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
-#
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# uts/common/inet/Makefile
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
-# include global definitions
-include ../../../Makefile.master
+# cmd/cmd-inet/usr.sbin/wificonfig/Makefile
+#
 
-HDRS=	arp.h common.h ipclassifier.h ip.h ip6.h ipdrop.h ipsecah.h ipsecesp.h \
-	ipsec_info.h ip6_asp.h ip_if.h ip_ire.h ip_multi.h ip_ndp.h ip_rts.h \
-	ipsec_impl.h keysock.h led.h mi.h mib2.h nd.h optcom.h sadb.h \
-	sctp_itf.h snmpcom.h tcp.h tcp_sack.h tun.h udp_impl.h arp_impl.h \
-	rawip_impl.h ipp_common.h ip_impl.h tcp_impl.h wifi_ioctl.h
+PROG=		wificonfig	
+OBJS=		wificonfig.o
+SRCS=		$(OBJS:%.o=%.c)
 
-ROOTDIRS= $(ROOT)/usr/include/inet
+include		../../../Makefile.cmd
 
-ROOTHDRS= $(HDRS:%=$(ROOT)/usr/include/inet/%)
+LDLIBS +=	-lsecdb
 
-CHECKHDRS= $(HDRS:%.h=%.check)
-
-$(ROOTDIRS)/%: %
-	$(INS.file)
+$(ROOTSBIN)/wificonfig := FILEMODE = 04755
+ROOTUSRSBINLINKS = $(ROOTUSRSBIN)/$(PROG)
 
 .KEEP_STATE:
 
-.PARALLEL: $(CHECKHDRS)
+all:	$(PROG)
 
-install_h: $(ROOTDIRS) $(ROOTHDRS)
+_msg:	$(POFILE)
 
-$(ROOTDIRS):
-	$(INS.dir)
+CPPFLAGS	+= -I$(SRC)/uts/common
 
-check:	$(CHECKHDRS)
+SECLEVEL	= standard
+
+$(PROG):	$(OBJS)
+	$(LINK.c) $(OBJS) -o $@ $(LDLIBS)
+	$(POST_PROCESS)
+
+install: all $(ROOTSBINPROG) $(ROOTUSRSBINLINKS)
+
+$(ROOTUSRSBINLINKS):
+	-$(RM) $@; $(SYMLINK) ../../sbin/$(PROG) $@
+
+clean:
+	$(RM) $(OBJS)
+
+lint:	lint_SRCS
+
+include		../../../Makefile.targ
