--- a/usr/src/pkgdefs/SUNWwlanu/Makefile
+++ b/usr/src/pkgdefs/SUNWwlanu/Makefile
@@ -20,38 +20,19 @@
 # CDDL HEADER END
 #
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
-#
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# uts/common/inet/Makefile
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
-# include global definitions
-include ../../../Makefile.master
 
-HDRS=	arp.h common.h ipclassifier.h ip.h ip6.h ipdrop.h ipsecah.h ipsecesp.h \
-	ipsec_info.h ip6_asp.h ip_if.h ip_ire.h ip_multi.h ip_ndp.h ip_rts.h \
-	ipsec_impl.h keysock.h led.h mi.h mib2.h nd.h optcom.h sadb.h \
-	sctp_itf.h snmpcom.h tcp.h tcp_sack.h tun.h udp_impl.h arp_impl.h \
-	rawip_impl.h ipp_common.h ip_impl.h tcp_impl.h wifi_ioctl.h
+include ../Makefile.com
 
-ROOTDIRS= $(ROOT)/usr/include/inet
-
-ROOTHDRS= $(HDRS:%=$(ROOT)/usr/include/inet/%)
-
-CHECKHDRS= $(HDRS:%.h=%.check)
-
-$(ROOTDIRS)/%: %
-	$(INS.file)
+DATAFILES += depend
 
 .KEEP_STATE:
 
-.PARALLEL: $(CHECKHDRS)
+all: $(FILES)
+install: all pkg
 
-install_h: $(ROOTDIRS) $(ROOTHDRS)
-
-$(ROOTDIRS):
-	$(INS.dir)
-
-check:	$(CHECKHDRS)
+include ../Makefile.targ
