PSARC 2005/440 Atheros 802.11b/g driver 5050300 Solaris need Atheros AR5212 WiFi driver

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -110,7 +110,8 @@ i386_SUBDIRS= \
 	SUNWrmodr \
 	SUNWrmodu \
 	SUNWrtls \
-	SUNWvia823x
+	SUNWvia823x \
+	SUNWatheros
 
 i386_XMODS= \
 	SUNWadpu320 \
