6219031 uts/Makefile.uts has useless lint directives

--- a/usr/src/uts/Makefile.uts
+++ b/usr/src/uts/Makefile.uts
@@ -151,11 +151,7 @@ MODEL		= $(MODEL_$(CLASS))
 #
 LHEAD =	( $(ECHO) "\n$@";
 
-LGREP.2 =	grep -v ' _init ' | \
-		grep -v ' _fini ' | \
-		grep -v ' _info ' | \
-		grep -v ' _depends_on ' | \
-		cat
+LGREP.2 =	egrep -v ' (_init|_fini|_info|_depends_on) '
 
 LTAIL =	)
 
@@ -165,8 +161,6 @@ LINTTAGS_32	=
 LINTTAGS_32	+= -erroff=E_BAD_PTR_CAST_ALIGN
 LINTTAGS_32	+= -erroff=E_SUPPRESSION_DIRECTIVE_UNUSED
 LINTTAGS_32	+= -erroff=E_SUSPICIOUS_COMPARISON
-LINTTAGS_32	+= -erroff=E_CAST_UINT_TO_SIGNED_INT
-LINTTAGS_32	+= -erroff=E_PASS_UINT_TO_SIGNED_INT
 LINTTAGS_32	+= -erroff=E_INVALID_ANNOTATION_NAME
 LINTTAGS_32	+= -erroff=E_OLD_STYLE_DECL_OR_BAD_TYPE
 LINTTAGS_32	+= -erroff=E_NO_EXPLICIT_TYPE_GIVEN
@@ -178,32 +172,10 @@ LINTTAGS_64	= $(LINTTAGS_32)
 
 # Selectively disable certain noisy lint errors
 LENIENT_LINTTAGS =
-LENIENT_LINTTAGS += -erroff=E_CAST_INT_TO_SMALL_INT
-LENIENT_LINTTAGS += -erroff=E_CAST_INT_CONST_TO_SMALL_INT
-LENIENT_LINTTAGS += -erroff=E_CAST_TO_PTR_FROM_INT
-LENIENT_LINTTAGS += -erroff=E_ASSIGN_INT_TO_SMALL_INT
-LENIENT_LINTTAGS += -erroff=E_ASSIGN_INT_FROM_BIG_CONST
-LENIENT_LINTTAGS += -erroff=E_CONST_PROMOTED_UNSIGNED_LL
-LENIENT_LINTTAGS += -erroff=E_CONST_PROMOTED_LONG_LONG
 LENIENT_LINTTAGS += -erroff=E_CONST_TRUNCATED_BY_ASSIGN
-LENIENT_LINTTAGS += -erroff=E_PASS_INT_FROM_BIG_CONST
-LENIENT_LINTTAGS += -erroff=E_COMP_INT_WITH_LARGE_INT
-LENIENT_LINTTAGS += -erroff=E_ASSIGN_UINT_TO_SIGNED_INT
-# These are still noisy but a bit more useful.
-# They shouldn't be used on new code.
-LENIENT_LINTTAGS += -erroff=E_PASS_INT_TO_SMALL_INT
-LENIENT_LINTTAGS += -erroff=E_PTR_CONV_LOSES_BITS
 
 # comment out next line to turn on pedantic 64-bit error checking
 LINTTAGS_64	+= $(LENIENT_LINTTAGS)
-
-LENIENT_i386_LINTTAGS	=
-
-LENIENT_amd64_LINTTAGS	=
-LENIENT_amd64_LINTTAGS	+= -erroff=E_BAD_PRAGMA_PACK_VALUE
-LENIENT_amd64_LINTTAGS	+= -erroff=E_SHIFT_CNT_NEG_TOO_BIG_L
-LENIENT_amd64_LINTTAGS	+= -erroff=E_CONST_PROMOTED_UNSIGNED_LL
-LENIENT_amd64_LINTTAGS	+= -erroff=E_CONST_PROMOTED_LONG_LONG
 
 LINTFLAGS_sparc_32	= $(LINTCCMODE) -nsxmuF -errtags=yes
 LINTFLAGS_sparc_64	= $(LINTFLAGS_sparc_32) -Xarch=v9
@@ -213,7 +185,7 @@ LINTFLAGS_i386_64	= $(LINTFLAGS_i386_32) -Xarch=amd64
 LINTTAGS_sparc_32	= $(LINTTAGS_32)
 LINTTAGS_sparc_64	= $(LINTTAGS_64)
 LINTTAGS_i386_32	= $(LINTTAGS_32)
-LINTTAGS_i386_64	= $(LINTTAGS_64) $(LENIENT_amd64_LINTTAGS)
+LINTTAGS_i386_64	= $(LINTTAGS_64)
 
 LINTFLAGS	= $(LINTFLAGS_$(MACH)_$(CLASS)) $(LINTTAGS_$(MACH)_$(CLASS))
 LINTFLAGS	+= $(C99LMODE)
