6238029 Chelsio NIC driver chxge can not send packets after a stress traffic testing 6316272 system crashed after Load/Unload driver many times 6350962 Updated chxge code from vendor should be integrated to Solaris

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1330,7 +1330,7 @@ CH_OBJS = ch.o glue.o pe.o sge.o
 
 CH_COM_OBJS =	ch_mac.o ch_subr.o cspi.o espi.o ixf1010.o mc3.o mc4.o mc5.o \
 		mv88e1xxx.o mv88x201x.o my3126.o pm3393.o tp.o ulp.o \
-		vsc7321.o xpak.o
+		vsc7321.o vsc7326.o xpak.o
 
 #
 #	PCI strings file 
